# fast-dag

./: README.md  pyproject.toml  release.md
.github/workflows/: python-package.yml
docs/: advanced-features.md  api-reference.md  building-workflows.md  core-concepts.md  execution.md  getting-started.md  index.md  migration-guide.md  spec-archive.md  troubleshooting.md
docs/examples/: README.md
docs/spec/: api-design.md  core-concepts.md  examples.md  visualization.md
examples/: 01_simple_sequential.py  02_complex_branching.py  03_fsm_state_machine.py  04_invalid_dag.py  05_manual_node_creation.py  README.md  caching_example.py  serialization_example.py
fast_dag/: __init__.py  dag.py  fsm.py
fast_dag/core/: __init__.py  cache.py  connections.py  context.py  introspection.py  nested.py  node.py  types.py  validation.py
fast_dag/core/node/: __init__.py  connections.py  core.py  execution.py  operators.py  validation.py
fast_dag/dag/: __init__.py  builder.py  core.py  execution.py  nested.py  serialization.py  visualization.py
fast_dag/fsm/: __init__.py  builder.py  core.py  execution.py  serialization.py  visualization.py
fast_dag/runner/: __init__.py  core.py  execution.py  node_execution.py  utils.py
fast_dag/serialization/: __init__.py  base.py  msgspec_serializer.py  registry.py  types.py
fast_dag/visualization/: base.py  graphviz.py  mermaid.py
tests/: conftest.py
tests/integration/: test_errors.py  test_examples.py
tests/unit/: test_cache.py  test_cache_advanced.py  test_cache_final_coverage.py  test_connections.py  test_connections_coverage.py  test_context_coverage.py  test_core_introspection_coverage.py  test_core_nested_coverage.py  test_core_validation_comprehensive.py  test_dag.py  test_dag_builder_coverage.py  test_dag_builder_extra_coverage.py  test_dag_execution.py  test_dag_execution_additional.py  test_dag_nested_comprehensive.py  test_dag_serialization_advanced.py  test_dag_serialization_comprehensive.py  test_dag_visualization.py  test_dag_visualization_comprehensive.py  test_fsm.py  test_fsm_advanced.py  test_fsm_core_coverage.py  test_fsm_execution_additional.py  test_fsm_execution_comprehensive.py  test_fsm_execution_coverage_100.py  test_fsm_serialization_coverage.py  test_fsm_visualization_coverage.py  test_fsm_visualization_import_error.py  test_graphviz_visualization.py  test_mermaid_visualization_coverage.py  test_msgspec_serializer_coverage.py  test_nested.py  test_node.py  test_node_hooks.py  test_node_operators_coverage.py  test_node_validation_coverage.py  test_registry_coverage.py  test_runner.py  test_runner_core_coverage.py  test_runner_execution_coverage.py  (+10 more)
